--- a/src/about.css
+++ b/src/about.css
@@ -49,6 +49,17 @@ body {
   aspect-ratio: 12 / 15;
 }
 
+@media (max-width: 991px) {
+  .about-container {
+    max-width: 600px;
+  }
+
+  .responsive-img {
+    display: none;
+    aspect-ratio: 4 / 5;
+  }
+}
+
 @media (max-width: 730px) {
   .about-container {
     padding-top: 30px;
@@ -74,5 +85,13 @@ body {
 
   .navbar-toggler {
     font-size: 12px;
+  }
+
+  .about-text h3 {
+    margin-bottom: 15px;
+  }
+
+  .about-text br {
+    display: none;
   }
 }
