--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,7 @@
   background-size: cover;
   color: #fff;
   text-align: center;
-  padding: 200px 0;
+  padding: 203px 0;
   margin-top: 60px;
 }
 
@@ -60,12 +60,19 @@ footer .social-links i {
 }
 
 @media (max-width: 730px) {
+  body {
+    background: #0f0f0f;
+  }
+
   .welcome {
-    padding: 100px 0;
+    transform: rotate(90deg);
+    padding: 295px 0px;
+    margin: 0px;
   }
 
   .welcome .text {
-    margin: 30px 30px 30px 240px;
+    transform: rotate(270deg);
+    margin: 30px 30px 30px 180px;
   }
 
   .welcome .text h1 {
@@ -77,7 +84,20 @@ footer .social-links i {
   }
 
   footer {
+    margin-top: 0px;
     padding: 20px;
+  }
+}
+
+@media (max-width: 541px) {
+  .welcome {
+    transform: rotate(90deg);
+    padding: 203px 0px;
+    margin: 0px;
+  }
+
+  footer {
+    margin-top: 125px;
   }
 }
 
@@ -95,11 +115,13 @@ footer .social-links i {
   }
 
   .welcome {
-    padding: 50px 0;
-    margin-top: 44px;
+    transform: rotate(90deg);
+    padding: 154px 0px;
+    margin: 0px;
   }
 
   .welcome .text {
+    transform: rotate(270deg);
     margin: 30px 30px 30px 180px;
   }
 
@@ -112,6 +134,23 @@ footer .social-links i {
   }
 
   footer {
+    margin-top: 340px;
     padding: 12px;
+  }
+}
+
+@media (max-width: 281px) {
+  .welcome {
+    transform: rotate(90deg);
+    padding: 82px 0px;
+    margin: 0px;
+  }
+
+  .welcome .text {
+    margin: 20px 30px 30px 130px;
+  }
+
+  footer {
+    margin-top: 330px;
   }
 }
